<resources>
    <string name="app_name">Maxitel</string>
    <string name="login">Номер договора</string>
    <string name="prompt_password">Пароль</string>
    <string name="hint_telNumber">Ваш номер телефона</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="error_invalid_email">Неверный логин</string>
    <string name="error_invalid_password">Пароль состит из 6–8 англ. букв или цифр</string>
    <string name="error_incorrect_password">Неверный пароль</string>
    <string name="error_field_required">Заполните это поле</string>
    <string name="incorrectPassword">Неверный логин или пароль</string>
    <string name="not_connect">Нет доступа к http://lk.maxitel.ru</string>
    <string name="show_password">Показать пароль</string>
    <string name="voluntary_suspension">"На ваш лицевой счет была подключена услуга"</string>
    <string name="title_activity_maxitel">MaxitelActivity</string>
    <string name="ok">ОК</string>
    <string name="zablokirovat">Заблокировать</string>
    <string name="not_connect_info">Не удалось соединиться с сервером.</string>
    <string name="exit">Выход</string>
    <string name="conform">Вы уверены?</string>
    <string name="exit_info">В следуюущий раз придется сново вводить логин и пароль</string>
    <string name="balanc">Баланс</string>
    <string name="pay_naw">Оплатить\nсейчас</string>
    <string name="pay_naw2">Оплатить</string>
    <string name="tv">Телевидение</string>
    <string name="tariffs">Тарифы</string>
    <string name="finances">Управление счётом</string>
    <string name="help">Помощь и поддержка</string>
    <string name="services">Услуги</string>
    <string name="good_login">Успешная авторизация</string>
    <string name="remember_you">Запомнить Вас?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="settings_saved">Настройки сохранены</string>
    <string name="wait">Пожалуйста, подождите,\nвыполняется вход</string>
    <string name="home">Новости</string>
    <string name="balanc_format">Баланс: %sруб</string>
    <string name="tariff_format">Тариф: %s</string>
    <string name="login_format">Договор №%s</string>
    <string name="inet_on">Доступ открыт</string>
    <string name="inet_on_message_format" translatable="false">Абонентская плата снимается ежедневно, равными долями. Примерно по %.2f рублей в день. При текущем тарифе деньги закончатся через %s дней.</string>
    <string name="voluntarily_locked_info">Доступ в интернет заблокирован. Абонентская плата не снимается.</string>
    <string name="razblokirovat">Разблокировать</string>
    <string name="voluntarily_locked">Добровольная блокировка</string>
    <string name="block_internet">Интернет заблокирован</string>
    <string name="sistem_block">Системная блокировка</string>
    <string name="system_block_info">Интернет заблокирован в сязи с отрицательным балансом. Напоиминаем Вам, что после наступления отрицательного баланса, для снятия блокировки, необходимо заплатить минимум за месяц вперед.</string>
    <string name="wait_p">Подождите, идет загрузка</string>
    <string name="badNews">Что-то пошло не так, попробуйте позже</string>
    <string name="abonent_pay">Абонентская плата</string>
    <string name="rub_mes">"%dруб./мес."</string>
    <string name="rub_add">"%dруб.</string>
    <string name="speed">Скорость</string>
    <string name="bolee_60_kan">Более 60\nканалов</string>
    <string name="promised_payment">Кредит</string>
    <string name="haur">72 часа</string>
    <string name="new_tariff">Подключение тарифа</string>
    <string name="run_tariff">Подключить</string>
    <string name="confirm">Я согласен с условиями</string>
    <string name="change_tariff_info" translatable="false">"
        Этот тарифный план вступает в силу начиная со следующего дня.\n
        При наступлении отрицательного баланса на лицевом счету абонента доступ в интернет блокируется, абонентская плата не снимается.\n
        Чтобы снова разблокировать интернет, Вам нужно положить на счет миниммум %d руб. (На месяц вперёд).\n
        На этом тарифе абонентская плата снимается не раз в месяц, а ежедневно равными долями. Примерно по %.2f руб. в день (зависит от количества дней в месяце).\n
        За подключение тарифа у Вас со счёта спишется %dруб. первого числа следующего месяца."
    </string>
    <string name="credit_info" translatable="false">"
        Услуга кредит платная - 30 рублей.\n
        Вам на счёт будет начислено %d руб. Через 3 дня эти средства спишуться.
    </string>
    <string name="voluntary_locked_info" translatable="false">"
        Добровольная блокировка - сервис, позволяющий временно (до 6 месяцев) приостановить обслуживание.\n
        Стоимость услуги "Добровольная блокировка" 50 рублей.\n
        Абонентская плата в этот период не снимается. Ваша абонентская линия остается абсолютно работоспособной. Выданные сетевые реквизиты удерживаются за абонентом."
    </string>
    <string name="unblock_info" translatable="false">"
        Доступ в интернет будет разблокирован в течение 10 минут.
    </string>
    <string name="request_call_info" translatable="false">
        Оператор свяжется с вами в ближайшее время. Введите номер телефона для связи.
    </string>
    <string name="iptv_ne_v_seti">
        Чтобы смотреть телевидение, должно быть выполнено несколько условий:\n\n
        1. Ваше устройство должно быть поключено к WiFi внутри сети Maxitel.\n\n
        2. Ваш маршрутизатор должен быть верно настроен. А именно настроены маршруты.\n\n
        Если у вас возникают проблемы, пожалуйста, обратитесь в службу технической поддержки компании Maxitel.
    </string>
    <string name="nastroika_po_info" translatable="false">"
        Опытные специалисты компании Maxitel быстро, качественно и недорого:
        - Настроят интернет
        - Установят антивирус
        - Избавят вас от назойлевой рекламы в интернете
        - Почистят компьютер от вирусов и нежелательного ПО
        и многое другое.
        Для вызова специалиста обратитесь в службу технической поддержки. По телефону 8-343-228-00-20"
    </string>
    <string name="o_kompanii_info" translatable="false">"
        Компания Maxitel заботится о каждом клиенте. У вас не работает интернет уже дольше, чем полчаса и на сайте компании нет информации о тех. работах?
        Звоните в техподдежку! Специалисты компании приложат все усилия, чтобы устранить проблемы, как можно быстрее."
    </string>
    <string name="diagnostika_info" translatable="false">"
        Если у Вас что-то не работает, можно попробовать решить проблему самостоятельно с помощью этой несложной инструкции"
    </string>
    <string name="question_1_pc" translatable="false">
        "Прежде чем пользоваться интернетом, нужно его включить (запустить VPN соединение).
        Когда вы пытаетесь включить интернет…"
    </string>
    <string name="question_1_router" translatable="false">"
        Первым делом попробуйте перезагрузить маршрутизатор. Для этого просто отключите его от питания на 5-10 секунд и включите обратно.
        Подождите, пока маршрутизатор загрузится (около минуты), и проверьте заработал ли интернет.

        Не помогло?
        Посмотрите на маршрутизатор, у него есть 3-5 портов, куда можно включить кабель. Но только один из них входящий порт.
        Он должен отличаться от остальных либо цветом, либо положением, или может быть подписан \"WAN\". Убедитесь, что кабель, который идёт из подъезда, включен в него.
        Остальные порты в маршрутизаторе для вашей домашней сети. Ваши устройства можно включить в любой из них.

        Всё правильно подключено, но не работет?
        Теперь давайте посмотрим на индикацию маршрутизатора (мигающие лампочки).
        Если на Вашем маршрутизаторе не горит ни одно лампочка, или горит только одна - Ваш маршрутизатор неисправен, нужно покупать новый :(

        На маршрутизаторах обычно есть:

        -лампочка питания (должна гореть всегда)

        -лампочка WiFi (должна гореть или мигать)

        -системная лампочка (должна мигать)

        -и по одной лампочке на каждый порт

        Теперь вам нужно найти, какая лампочка отвечает за входящий порт. Просто отключите входящий кабель, она должна погаснуть. Включите кабель обратно, она должна загореться.
        Теперь проверьте интернет еще раз."
    </string>
    <string name="question_2_pc_norm" translatable="false">"
        Интернет совсем не работает, или работает, но очень медленно?
    </string>
    <string name="question_2_pc_false" translatable="false">"
        При попытке подключения должно приходить сообщение об ошибке с номером…
    </string>
    <string name="question_2_router_lampa_ne_gorit" translatable="false">"
        Такое может быть из-за двух причин:

        1. Не исправен WAN порт в маршрутизаторе. Чтобы проверить это, попробуйте переключить входящий кабель в другой порт. Если там ламопчка загорится - похоже у вас сгорел WAN порт, нужен новый маршрутизатор.
        Если в другом порту лампочка тоже не горит, см. пункт 2.

        2. Повреждён кабель. Проверьте целостность кабеля внутри квартиры. Интернет-кабель достаточно надёжный, если есть какие-то повреждения, их сразу будет видно.
        Если никаких видимых повреждений нет - скорее всего причина поломки со стороны Maxitel. Тут без техподдежки Вам не обойтись. Вызов техников скорее всего будет бесплатным."
    </string>
    <string name="question_2_router_lampa_gorit" translatable="false">"
        Работает ли интернет хотя бы на одном устройсве, подкюченном к маршрутизатору? (Телефон, планшет, ноутбук, ПК)
    </string>
    <string name="q3_pc_sovsem_ne_rabotaet" translatable="false">"
        Такое происходит чаще всего из-за:

        1. Ваш лицевой счёт заблокирован. Может это добровольная блокировка или системная (за неуплату).
        Напоминаем Вам, что если Вы допустили минус на своём счету, счёт блокируется. Для разблокировки нужно заплатить сразу за месяц.
        Дополнительную информацию можно получить в техподдержке.

        2. Проблемы с компьютером. Возможно фаервол, неверно настроен прокси сервер, дейсвия вирусов, ошибки операционой системы.
        Если Вы сами не можете устранить проблему - обратитесь в техподдержку. Вызов специалистов скорее всего будет платный.

        Что сказать оператору?
        \"Здравствуйте! Мой номер договора - ХХХХ. У меня подключается VPN (ВПН), но интернет не работает\""
    </string>
    <string name="history_payment">История\nплатежей</string>
    <string name="hint">Воспользоваться этими услугами, с помощью приложения можно только внутри сети Maxitel.\nТоесть Ваше устройство должно быть подключено к WiFi.</string>
    <string name="nastroika_po">Настройка ПО</string>
    <string name="o_kompanii">О компании</string>
    <string name="call">Позвонить</string>
    <string name="request_call">Заказать звонок</string>
    <string name="srazu_v_pc">Сразу в компьютер</string>
    <string name="v_router">в маршрутизатор (роутер)</string>
    <string name="question_0">Кабель, который идёт из подъезда включен…</string>
</resources>