<?xml version="1.0" encoding="utf-8"?>


<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/screen_background_light_transparent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o_kompanii"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o_kompanii_info"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/requestСall"
                style="@style/MaxiTelSmallButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_call" />

            <Button
                android:id="@+id/button3"
                style="@style/MaxiTelSmallButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call" />



        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Диагностика"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diagnostika_info"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button4"
            style="@style/MaxiTelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="Не работает интернет?" />

        <Button
            android:id="@+id/button5"
            style="@style/MaxiTelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="Не работает телевидение?" />


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>