<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.maxitel.lk.DiagnosticsActivity">



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/srazu_v_pc"
        android:id="@+id/button6"
        style="@style/MaxiTelButton"
        android:layout_above="@+id/button7"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/v_router"
        android:id="@+id/button7"
        style="@style/MaxiTelButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />



    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_above="@+id/button6"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Сбор информации"
                android:id="@+id/textView5" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/question_0"
                android:id="@+id/infoTextView" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:id="@+id/customViewInfo"
                android:layout_margin="10dp">

                <EditText
                    android:id="@+id/infoEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Введите номер ошибки"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

    </ScrollView>




</RelativeLayout>
